# gaia

./: Cargo.toml  README.md  dfx.json  package-lock.json  package.json
docs/: ARCHITECTURE.md  NAMING.md  ROADMAP.md  RPC_TRANSPORT.md
src/candid/: comment.did  common.did  fruit.did  gaia_ledger_init.did  git.did  hypha.did  issue.did  user.did
src/forest/: Cargo.toml  forest.did
src/forest/src/: hooks.rs  lib.rs  service.rs  store.rs  types.rs
src/forest/src/repo/: README.md  diff.rs  merge.rs  mod.rs  objects.rs  ref.rs
src/gaia/: Cargo.toml  gaia.did
src/gaia_backend/: Cargo.toml
src/gaia_frontend/: mytheme.js  mytheme.ts  package.json  svelte.config.js  tailwind.config.js  tailwind.config.ts  tsconfig.json  vite.config.js
src/gaia_frontend/src/: app.html
src/gaia_frontend/src/lib/: auth.js  canisters.js
src/gaia_frontend/src/lib/components/: auth.svelte  canisterid.svelte  fruit.svelte
src/gaia_frontend/src/lib/components/mycelia/: issue.svelte  roadmap.svelte
src/gaia_frontend/src/routes/: +layout.svelte  +page.svelte
src/gaia_frontend/src/routes/canopy/: +page.svelte
src/gaia_frontend/src/routes/drey/: +page.svelte
src/gaia_frontend/src/routes/forest/: +page.svelte
src/gaia_frontend/src/routes/fruits/: +page.svelte  fruits_testdata.ts
src/gaia_frontend/src/routes/mycelium/: +page.svelte
src/gaia_frontend/src/routes/test/: +page.svelte  auth.js
src/gaia_frontend/src/routes/trees/: +page.svelte
src/mycelium/: Cargo.toml  mycelium.did
