[package]
name = "forest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
gix-actor = "0.33.2"
gix-date = "0.9.3"
gix-hash = "0.16.0"
gix-object = "0.47.0"
ic-cdk = "0.17"
ic-cdk-timers = "0.11" # Feel free to remove this dependency if you don't need timers
ic-stable-structures = "0.6.7"
serde = "1.0.218"
serde_derive = "1.0.218"
